# pdf-viewer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  justfile  state.json
pdf-tui/: Cargo.toml
pdf-tui/src/: api_client.rs  main.rs
pdf-tui/src/app/: mod.rs  pdf_page.rs  stateful_table.rs
src/: lib.rs  main.rs  persistence.rs  routes.rs  startup.rs  state.rs
src/routes/: get_pdf.rs  main_page.rs  mod.rs  next.rs  prev.rs  set_page.rs  static_path.rs  stats.rs  status.rs  view_pdf.rs
static/: index.css  view_pdf.css  view_pdf.js
templates/: index.html  view_pdf.html
