[package]
name = "pdf-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.11.1", features = ["with-axum"] }
askama_axum = "0.1.0"
axum = "0.5.15"
clap = { version = "3.2.17", features = ["cargo"] }
http = "0.2.8"
hyper = "0.14.20"
include_dir = "0.7.2"
mime_guess = "2.0.4"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0.85", features = ["std"] }
tokio = { version = "1.20.1", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["io"] }
tower-http = { version = "0.3.4", features = ["cors", "trace"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
dirs = "4.0.0"
chrono = { version = "0.4.26", features = ["serde"] }
rand = "0.8.5"
lopdf = { version = "0.31.0", features = ["nom"] }
