[package]
name = "pdf-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pdf-tui"
path = "pdf-tui/src/main.rs"

# Maybe use required features to pull in dependencies depending on which binaries are being built

[dependencies]
askama = { version = "0.11.1", features = ["with-axum"] }
askama_axum = "0.1.0"
axum = "0.5.16"
clap = { version = "3.2.17", features = ["cargo"] }
http = "0.2.8"
hyper = "0.14.20"
include_dir = "0.7.2"
mime_guess = "2.0.4"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0.85", features = ["std"] }
tower-http = { version = "0.3.4", features = ["cors", "trace"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
dirs = "4.0.0"
chrono = { version = "0.4.26", features = ["serde"] }
rand = "0.8.5"
lopdf = { version = "0.31.0", features = ["nom"] }
crossterm = "0.26.1"
ratatui = { version = "0.21.0", features = ["all-widgets"] }
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["io"] }
