[package]
name = "tui_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdf_viewer = {version = "0.1.0", path = "../"}
crossterm = "0.26.1"
ratatui = { version = "0.21.0", features = ["all-widgets"] }
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.28.2", features = ["full"] }
chrono = "0.4.26"
